--- a/config/boards/shields/ChocX/ChocX_L.conf
+++ b/config/boards/shields/ChocX/ChocX_L.conf
@@ -11,7 +11,10 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_BT_BAS=y
 
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=100
-CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+#CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT_BRT_START=100
+#CONFIG_ZMK_BACKLIGHT_ON_START=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
