--- a/config/boards/shields/ChocX/ChocX_R.conf
+++ b/config/boards/shields/ChocX/ChocX_R.conf
@@ -25,7 +25,10 @@ CONFIG_BT_BAS=y
 
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=100
-CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+#CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT_BRT_START=100
+#CONFIG_ZMK_BACKLIGHT_ON_START=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
